--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -72,7 +72,7 @@
             padding: 10px 20px;
         }
         &__pp {
-            width: 176px;
+            width: 150px;
             display: flex;
             justify-content: space-between;
         }
@@ -96,15 +96,18 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        font-size: 100px;
+        font-size: 80px;
         font-weight: bold;
         
 
         color: #fff;
 
-
+        &--first {
+            margin-left: 100px;
+        }
         &--second {
             text-align: right;
+            margin-right: 100px;
         }
     }
 
@@ -119,7 +122,7 @@
             color: #fff;
             border: 1px solid #fff;
             border-radius: 2px;
-            padding: 17px 92px;
+            padding: 17px 80px;
             font-size: 22px;
         }
     }
