--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-weight: 400;
     font-size: 10px;
 }
@@ -38,6 +38,7 @@ body {
 .nav-container {
     width: 1270px;
     margin: 0 auto;
+    padding: 10px 40px;
 }
 /* --------------------------------------- */
 
