--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  
     height: 100vh;
     position: relative;
     overflow: hidden;
@@ -56,15 +55,10 @@
     }
 
     &-pagination {
-        position: absolute;
-        bottom: 10%;
-        left: 0;
-        right: 0;
-        z-index: 9;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        // flex-direction: column;
         &__btn {
             border: 2px solid #fff;
             border-radius: 3px;
@@ -77,12 +71,18 @@
             justify-content: space-between;
         }
     }
+    &-bottom {
+        &__block {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
     
     &__bottom{
         position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        width: 100%;
+        bottom: 35px;
         z-index: 9;
     }
     &__block {
@@ -96,18 +96,21 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        font-size: 80px;
+        font-size: 126px;
         font-weight: bold;
+        line-height: .8;
         
 
         color: #fff;
 
         &--first {
-            margin-left: 100px;
+            display: block;
+            // margin-left: 10%;
         }
         &--second {
+            display: block;
             text-align: right;
-            margin-right: 100px;
+            // margin-right: 50%;
         }
     }
 
@@ -115,6 +118,7 @@
         display: flex;
         justify-content: center;
         margin-top: 50px;
+        background: rgba(0,0,0,.35);
 
 
         a {
@@ -126,18 +130,14 @@
             font-size: 22px;
         }
     }
-    &__btns {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 40px 20px;
-        cursor: pointer;
-    }
+   
     &__sos {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 127px;
+        height: 60px;
 
-        padding: 10px 10px;  
         font-size: 20px;
         cursor: pointer;
         background-color: #C12929; 
@@ -148,13 +148,39 @@
         }
     }
     &__chat {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: #0ABE3D;
         font-size: 20px;
-        padding: 15px 10px;
+        width: 135px;
+        height: 60px;
+        // padding: 15px 10px;
         text-decoration: none;
         color: #fff;
         cursor: pointer;
     }
 
 
+}
+
+#pagination {
+    display: flex;
+    justify-content: space-between;
+    width: 175px;
+    margin-top: 14px; 
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.pagination-btn {
+    display: flex;
+    outline: none;
+    border-radius: 50%;
+    border: none;
+    background-color: #fff;
+    width: 12px;
+    height: 12px;
+    cursor: pointer;
 }
