--- a/src/assets/scss/pages/office/_office.scss
+++ b/src/assets/scss/pages/office/_office.scss
@@ -15,6 +15,11 @@
         display: flex;
         justify-content: space-between;
         margin-top: 32px;
+        &--item2 {
+            &-item {
+                width: 50%;
+            }
+        }
     }
     &-list {
         display: flex;
@@ -27,16 +32,18 @@
         }
     }
     &-item {
-        width: 25%;
+        width: 317px;
         padding: 0 25px;
         margin-top: 43px;
         &__title {
             width: 396px;
             color: #221F39;
             font-size: 30px;
+            font-family: "Roboto";
             font-weight: 600;
             h4 {
                 margin: 0;
+                font-family: "Roboto" sans-serif;
             }
         }
         &__list {
@@ -55,6 +62,10 @@
         &__adress {
             font-size: 18px;
             color: #221F39;
+            p {
+
+                font-family: "Roboto" sans-serif;
+            }
         }
         &__tel {
             text-decoration: none;
