--- a/src/assets/scss/pages/manual/_manual.scss
+++ b/src/assets/scss/pages/manual/_manual.scss
@@ -1,13 +1,29 @@
 .manual {
+    &__img img {
+        @media (max-width: 768px) {
+          width: 100%;
+        }
+    }
+
     &-item {
         display: flex;
         padding: 54px 0 98px;
         &:first-child {
             padding: 0;
         }
+        @media (max-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
     }
     &-content {
         margin-left: 50px;
+        @media (max-width: 768px) {
+            margin-left: 0;
+            width: 100%;
+        }
+
         &__name {
             font-size: 20px;
             font-weight: bold;
@@ -29,6 +45,9 @@
         }
         &__day {
             font-size: 20px;
+        @media (max-width: 768px) {
+            line-height: 1.5;
+        }
             span {
                 font-weight: bold;
                 margin-right: 7px;
@@ -41,6 +60,12 @@
             font-size: 20px;
             margin-top: 31px;
             width: 600px;
+        @media (max-width: 768px) {
+            flex-wrap: wrap;
+            width: 300px;
+
+        }
+
             a{
                 text-decoration: none;
                 color: #221F39;
@@ -51,6 +76,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        @media (max-width: 768px) {
+            margin: 15px 0;
+        }
             &--tg {
                 a {
                 color: #1D8EFF;
