--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -15,6 +15,10 @@ body {
     margin: 0 auto;
     overflow: visible;
     // padding: 0 15px;
+    @media (max-width: 768px) {
+        width: 100%;
+        padding: 0 15px;
+    }
 }
 
 /* ------------nav background Color--------- */
@@ -39,6 +43,12 @@ body {
     width: 1270px;
     margin: 0 auto;
     padding: 10px 40px;
+    @media (max-width: 768px) {
+        width: 100%;
+        padding: 10px 25px;
+    }
+
+
 }
 /* --------------------------------------- */
 
@@ -48,6 +58,10 @@ body {
     font-weight: bold;
     color: #221F39;
     margin: 33px 0 30px;
+    @media (max-width: 768px) {
+        font-size: 25px;
+    }
+
 }
 
 .btn {
