--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -10,18 +10,30 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
-    }   
+        @media (max-width: 768px) { 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            :nth-child(3) {
+                display: block;
+                margin-right: auto;
+            }
 
+        }
+    }   
+    
     &-list {
         display: flex;
         flex-direction: column;
         list-style: none;
         padding: 0;
-
+        
         &__item {
             display: flex;
             align-items: center;
             margin: 0 0 25px;
+           
         }
     }
     &-item {
@@ -45,11 +57,18 @@
             justify-content: space-between;
             width: 100%;
             font-size: 16px;
+            @media (max-width: 768px) {
+                flex-direction: column;
+            }
+
         }
         &__link {
             font-size: 18px;
             text-decoration: none;
             color: #000;
+            @media (max-width: 768px) {
+                margin-top: 15px;
+            }
         }
         &__adress {
             font-size: 18px;
