--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -3,6 +3,19 @@
     position: relative;
     overflow: hidden;
 
+    @media (max-width: 768px) {
+        .header {
+            &__title {
+                &--first {
+                    font-size: 40px;
+                }
+                &--second {
+                    font-size: 40px;
+                }
+            }
+        }
+    }
+
 
     &__top {
         display: flex;
@@ -24,6 +37,9 @@
         justify-content: center;
         flex-direction: column;
         padding: 0 30px;
+        @media (max-width: 768px) {
+            padding: 0;
+        }
     }
 
     &__list  {
@@ -55,10 +71,9 @@
     }
 
     &-pagination {
-        // display: flex;
-        // align-items: center;
-        // justify-content: center;
-        // flex-direction: column;
+        @media (max-width: 768px) {
+            display: none;
+        }
         &__btn {
             border: 2px solid #fff;
             border-radius: 3px;
@@ -67,6 +82,7 @@
         }
         &__pp {
             width: 150px;
+            height: 60px;
             display: flex;
             justify-content: space-between;
         }
@@ -96,7 +112,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        font-size: 126px;
+        font-size: 90px;
         font-weight: bold;
         line-height: .8;
         
@@ -126,17 +142,24 @@
             color: #fff;
             border: 1px solid #fff;
             border-radius: 2px;
-            padding: 17px 80px;
+            padding: 15px 55px;
             font-size: 22px;
+            @media (max-width: 768px) {
+                padding: 0;
+                width: 250px;
+                height: 60px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
     }
-   
     &__sos {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 127px;
-        height: 60px;
+        width: 115px;
+        height: 50px;
 
         font-size: 20px;
         cursor: pointer;
@@ -146,6 +169,9 @@
         img {
             padding-left: 10px;
         }
+        @media (max-width: 768px) {
+            width: 100px;
+        }
     }
     &__chat {
         display: flex;
@@ -153,8 +179,8 @@
         justify-content: center;
         background-color: #0ABE3D;
         font-size: 20px;
-        width: 135px;
-        height: 60px;
+        width: 120px;
+        height: 50px;
         // padding: 15px 10px;
         text-decoration: none;
         color: #fff;
@@ -173,6 +199,7 @@
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
+    
 }
 .pagination-btn {
     display: flex;
