--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -59,31 +59,51 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media (max-width: 768px) {
+            width: 100%;
+            justify-content: space-between;
+        }
     }
     
     &__list {
         display: flex;
         &-item {
             list-style-type: none;
+            @media (max-width: 768px) {
+                display: none;
+                &:last-child{
+                    display: flex;
+                }
+            }
         }
     }
     &__link {
         text-decoration: none;
-        font-size: 22px;
+        font-size: 18px;
         border: 1px solid #221F39;
         border-radius: 4px;
         padding: 8px;
 
         &--search {
             margin-right: 67px;
-            padding: 8px 20px;
+            padding: 8px 13px;
         }
         &--menu {
             margin-left: 67px;
-            padding: 8px 20px ;
+            padding: 8px 13px ;
+            @media (max-width: 768px) {
+                margin: 0;
+            }
         }
         &--lang {
             margin: 0 34px;
+        }
+    }
+    &__logo a img{
+        width: 170px;
+        @media (max-width: 768px) {
+            height: 50px;
+            margin-right: 40px;
         }
     }
 }
