--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -14,6 +14,10 @@
     transition: all .5s ease-in;
     transform: translateX(100%);
     opacity: 1;
+    @media (max-width: 768px) {
+        width: 100%;
+        margin: 0;
+    }
 
     &--white {
         overflow-y: scroll;
@@ -23,6 +27,9 @@
 
     &-list {
         margin-left: 50px;
+        @media (max-width: 768px) {
+            margin-left: 20px;
+        }
     }
 
     
@@ -40,6 +47,9 @@
         z-index: 999;
         right: 50px;
         top: 30px;
+        @media (max-width: 768px) {
+            right: 20px;
+        }
     }
     &__title {
         color: #fff;
@@ -47,6 +57,9 @@
         font-weight: bold;
         margin: 65px 0 52px;
         text-align: center;
+        @media (max-width: 768px) {
+            margin-top: 25px;
+        }
     }
     &__item {
         margin-top: 15px;
@@ -78,7 +91,7 @@
     }
 }
 
-.overlay {
+#overlay {
     position: absolute;
     top: 0;
     right: 0;
@@ -90,6 +103,10 @@
     background: rgba($color: #000000, $alpha: .5);
     overflow: hidden;
     transition: all .5s linear;
+    &.open{
+        opacity: 1;
+        z-index: 9;
+    }
 }
 
 
@@ -115,7 +132,10 @@
     opacity: 0;
     z-index: -1;
     overflow: hidden;
-
+    @media (max-width: 768px) {
+        width: 100%;
+        margin-right: 0;
+    }
     &--white {
         background: rgba(255, 255, 255, .5);
         backdrop-filter: blur(8px);
@@ -132,11 +152,18 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @media (max-width: 768px) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &-main {
         display: flex;
         align-self: flex-start;
+        @media (max-width: 768px) {
+            align-self: center;
+        }
     }
     &-title {
         color: #fff;
@@ -146,8 +173,20 @@
     }
     &-form {
         width: 100%;
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
         &__label {
             position: relative;
+            @media (max-width: 768px) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
         }
         &__group {
             display: block;
@@ -172,7 +211,10 @@
             outline: none;
             font-size: 25px;
             transition: .3s linear;
-
+            @media (max-width: 768px) {
+                width: 80%;
+                margin: 0 auto;
+            }
             &:focus {
                 border-color:#0ABE3D;
             }
@@ -183,6 +225,9 @@
             justify-content: space-between;
             width: 100%;
             margin-top: 30px;
+            @media (max-width: 768px) {
+                justify-content: space-around;
+            }
         }
         &__btn {
             border: 1px solid #fff;
@@ -191,12 +236,18 @@
             padding: 12px 45px;
             margin: 0;
             transition: .3s linear;
+            @media (max-width: 768px) {
+                padding: 12px 30px;
+            }
             &:hover {
                 background-color: #0ABE3D;
                 border-color: #0ABE3D;
             }
             &--reg {
                 padding: 12px 35px;
+                @media (max-width: 768px) {
+                    padding: 12px 30px;
+                }
             }
         }
 
@@ -204,6 +255,10 @@
             position: absolute;
             right: 18px;
             top: 50%;
+            @media (max-width: 768px) {
+                right: 40px;
+                top: 48%;
+            }
         }
     }
 }
