--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -5,7 +5,7 @@
     background-color: #fff; 
 
     position: absolute;
-    top: 0;
+    top: 0px;
 
     font-size: 18px;
     color: #221F39;
@@ -14,13 +14,18 @@
     opacity: 0;
     transform: translateZ(100px);
     transition: all .5s linear;
-
+  
+    &.open{
+        opacity: 1;
+        z-index: 9;
+    }
     &-close {
         &__icon {
             position: absolute;
             top: 0;
             right: 0;
             bottom: -50px;
+            z-index: 9;
         }
     }
     &--calmodal2 {
