--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -6,14 +6,19 @@
         position: relative;
         height: 100vh;
         overflow: hidden;
+     
         
 
         &__title {
             text-align: center;
-            font-size: 60px;
+            font-size: 70px;
             color: #fff;
             margin-top: 121px;
             margin-bottom: 15px;
+            @media (max-width: 768px) {
+                font-size: 25px;
+            }
+
             h2{
                 margin-bottom: 0;
             }   
@@ -24,12 +29,16 @@
             justify-content: center;
             align-items: center;
             a {
+
                 text-decoration: none;
                 border: 1px solid #fff;
                 padding: 17px 60px;
                 color: #fff;
                 font-size: 22px;
                 background: rgba(0, 0, 0, .35);
+            @media (max-width: 768px) {
+                padding: 10px 30px;
+            }
             }
         }
     }
@@ -38,6 +47,12 @@
         justify-content: center;
         align-items: center;
         padding: 60px 0;
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
     }   
     &-item {
         &__img {
@@ -71,6 +86,13 @@
         flex-wrap: wrap;
         justify-content: space-between;
         padding: 0 50px 74px;
+        @media (max-width: 768px) {
+            padding: 0 15px 45px;
+            a {
+                margin-top: 15px;
+            }
+        }
+
     }
 
 }
