--- a/src/assets/scss/pages/announ/_announ.scss
+++ b/src/assets/scss/pages/announ/_announ.scss
@@ -16,7 +16,7 @@
         overflow: hidden;
         &__img {
             width: 100%;
-            height: 100%;
+            height: 250px;
             background-image: url(../img/news-item-bg.jpg);
             background-size: cover;
             background-repeat: no-repeat;
