--- a/src/assets/scss/pages/news/_news.scss
+++ b/src/assets/scss/pages/news/_news.scss
@@ -27,6 +27,10 @@
         padding: 15px 24px;
         font-size: 18px;
         transition:  0.3s;
+        @media (max-width: 768px) {
+            padding: 10px 20px;
+            font-size: 16px;
+        }
         img {
             margin-right: 20px;
         }
