--- a/src/assets/scss/pages/reporting/_reporting.scss
+++ b/src/assets/scss/pages/reporting/_reporting.scss
@@ -12,7 +12,11 @@
     &-block {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
+        @media (max-width: 768px) {
+            width: 100%;
+        }
     }
     &-item {
         display: flex;
@@ -22,6 +26,9 @@
 
         &--center {
             justify-content: center;
+        @media (max-width: 768px) {
+           width: 100%;
+        }
         }
 
         p {
@@ -29,6 +36,13 @@
             font-size: 20px;
         }
     }
+    // &__list {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     justify-content: center;
+    // }
     &-list {
         padding-bottom: 88px;
         &__item {
@@ -37,14 +51,28 @@
             justify-content: space-between;
             list-style-type: none;
             margin-top: 40px;
+            @media (max-width: 768px) {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+
+
         }
         &__btn {
             margin: 0;
             padding: 15px 50px;
+            @media (max-width: 768px) {
+                margin: 15px 0;
+            }
         }
         &__text {
             font-size: 22px;
             width: 550px;
+            @media (max-width: 768px) {
+                text-align: center;
+                margin-top: 10px;
+            }
         }
         &__download {
             border: 1px solid;
@@ -59,6 +87,12 @@
                 color: #fff;
                 box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
             }
+            @media (max-width: 768px) {
+                // width: 200px;
+                text-align: center;
+            }
+
+           
         }
     }
 
