--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    padding: 56px 0 30px;
+    padding: 30px 0 30px;
 
 
     &__block {
@@ -16,7 +16,6 @@
             align-items: center;
             justify-content: center;
             :nth-child(3) {
-                display: block;
                 margin-right: auto;
             }
 
@@ -32,21 +31,27 @@
         &__item {
             display: flex;
             align-items: center;
-            margin: 0 0 25px;
-           
+            margin: 0 0 15px;
+            @media (max-width: 768px) { 
+                align-items: center;
+            }
+
+            
+            
         }
     }
     &-item {
+      
         &__title {
             font-weight: bold;
             font-size: 22px;
-            margin-bottom: 42px;
+            margin-bottom: 30px;
         }
         
         &__text {
-            font-size: 18px;
-            line-height: 1.8;
-            margin: 42px 0 31px;
+            font-size: 16px;
+            line-height: 1.5;
+            margin: 30px 0 31px;
             a {
                 color: #000;
                 text-decoration: none;
@@ -82,6 +87,8 @@
             justify-content: center;
             align-items: center;
             margin-right: 30px;
+          
+
         }
     }
 }
