--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -77,8 +77,15 @@
         &__btn {
             border: 2px solid #fff;
             border-radius: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 55px;
+            width: 55px;
             background: rgba(0,0,0,.35);
-            padding: 10px 20px;
+            img{
+                height: 30px;
+            }
         }
         &__pp {
             width: 150px;
@@ -160,14 +167,15 @@
         align-items: center;
         width: 115px;
         height: 50px;
-
-        font-size: 20px;
+        border-radius: 5px;
+        font-size: 16px;
         cursor: pointer;
         background-color: #C12929; 
         color: #fff;
         text-decoration: none;
         img {
             padding-left: 10px;
+            height: 15px;
         }
         @media (max-width: 768px) {
             width: 100px;
@@ -178,10 +186,10 @@
         align-items: center;
         justify-content: center;
         background-color: #0ABE3D;
-        font-size: 20px;
+        font-size: 16px;
         width: 120px;
         height: 50px;
-        // padding: 15px 10px;
+        border-radius: 5px;
         text-decoration: none;
         color: #fff;
         cursor: pointer;
@@ -207,7 +215,7 @@
     border-radius: 50%;
     border: none;
     background-color: #fff;
-    width: 12px;
-    height: 12px;
+    width: 8px;
+    height: 8px;
     cursor: pointer;
 }
