--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -16,6 +16,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+      
     }
 
     
@@ -29,6 +30,8 @@
     &-wrapper {
         height: 100%;
         width: 100%;
+       
+        
     }
     
     &-slide {
@@ -41,6 +44,9 @@
         text-align: center;
         font-size: 30px;
         font-weight: bold;
+        @media (max-width: 768px) {
+            margin-left: 0;
+        }
     }
 
     &-button {
