--- a/src/assets/scss/pages/list/_list.scss
+++ b/src/assets/scss/pages/list/_list.scss
@@ -1,4 +1,17 @@
 .list {
+    &-block {
+        @media (max-width: 768px) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            // flex-wrap: wrap;
+            flex-direction: column;
+            :last-child {
+                margin-bottom: 15px;
+            }
+        }
+
+    }
     &-img {
         display: flex;
         flex-direction: column;
@@ -6,19 +19,43 @@
         font-size: 30px;
         color: #221F39;
         margin: 190px 0 300px;
+        @media (max-width: 768px) {
+            font-size: 15px;
+            text-align: center;
+            width: 100%;
+            margin: 100px 0;
+            h2 {
+                margin-top: 50px;
+            }
+        }
     }
     &-item {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media (max-width: 768px) {
+            flex-direction: column;
+           
+        }
         &__img {
             display: flex;
             flex-direction: column;
             font-size: 12px;
+             @media (max-width: 768px) {
+                 align-items: center;
+                 justify-content: center;
+                 flex-wrap: wrap;
+                 font-size: 25px;
+                 flex-direction: column;
+                 text-align: center;
+                 p {
+                     margin-top: 15px;
+                 }
+             }
+
             img {
                 max-width: 350px;
             }
-          
 
         }
         &__name {
@@ -26,17 +63,33 @@
             font-size: 26px;
             font-weight: bold;
             color: #221F39;
+            @media (max-width: 768px) {
+                text-align: center;
+                margin-bottom: 15px;
+                font-size: 25px;
+            }
+            
         }
         &__text {
             width: 350px;
             line-height: 2;
             font-size: 14px;
+            @media (max-width: 768px) {
+                text-align: center;
+                width: 100%;
+                font-size: 16px;
+            }
         }
         &__price {
             width: 350px;
             font-size: 40px;
             font-weight: bold;
             color: #221F39;
+            @media (max-width: 768px) {
+                text-align: center;
+                font-size: 30px;
+                margin-bottom: 15px;
+            }
         }
     }
     &-line {
