--- a/src/assets/scss/pages/register/_register.scss
+++ b/src/assets/scss/pages/register/_register.scss
@@ -11,17 +11,43 @@
     opacity: 0;
     transition: all .3s linear;
     padding: 40px 60px;
+    @media (max-width: 768px) {
+        padding: 0;
+    }
     &-block {
         display: flex;
         justify-content: space-between;
+        @media (max-width: 768px) {
+            width: 100%;
+
+            align-items: center;
+            flex-direction: column;
+        
+        }
     }
     &-item {
+        &--logo {
+            @media (max-width: 768px) {
+                display: none;
+            }
+
+        }
         width: 33.3%;
         &:nth-child(2) {
+            margin-top: 15px;
             width: 40%;
+            @media (max-width: 768px) {
+                width: 100%;
+            }
+
         }
         &:nth-child(3) {
             text-align: right;
+            @media (max-width: 768px) {
+                position: absolute;
+                top: 15px;
+                right: 25px;
+            }
         }
         &__title {
             text-align: center;
@@ -29,6 +55,12 @@
             font-weight: bold;
             color: #0ABE3D; 
             margin: 0;
+            @media (max-width: 768px) {
+                margin-top: 15px;
+                font-size: 25px;
+                width: 100%;
+            }
+            
         }
 
         &__subtitle {
@@ -36,6 +68,9 @@
             font-size: 20px;
             line-height: 1.5;
             margin: 20px 0 25px;
+            @media (max-width: 768px) {
+                font-size: 15px;
+            }
         }
 
         &__group {
@@ -44,8 +79,14 @@
             align-items: center;
             max-width: 430px;
             padding-bottom: 50px;
-                input {
-                    display: block;
+            @media (max-width: 768px) {
+                width: 100%;
+            }
+            input {
+                display: block;
+                    @media (max-width: 768px) {
+                        width: 100%;
+                    }
                     background-color: #D9D4FF;
                     border: none;
                     height: 41px;
@@ -73,6 +114,12 @@
 
         &__btn {
             text-align: center;
+            @media (max-width: 768px) {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            
             a {
                 padding: 13px 51px;
                 background-color: #0ABE3D;
@@ -88,6 +135,10 @@
             text-align: center;
             font-size: 18px;
             margin-top: 49px;
+            @media (max-width: 768px) {
+                margin-top: 30px;
+                margin-bottom: 15px;
+            }
 
             a {
                 text-decoration: none;
