--- a/src/assets/scss/pages/verify/_verify.scss
+++ b/src/assets/scss/pages/verify/_verify.scss
@@ -16,6 +16,19 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media (max-width: 768px) {
+            :nth-child(2) {
+                margin-left: auto;
+            }
+        }
+       
+    }
+    &-item {
+        &--logo {
+          @media (max-width: 768px) {
+              display: none;
+          }
+        }
     }
     &__title {
         text-align: center;
@@ -23,6 +36,10 @@
         font-weight: bold;
         color: #0ABE3D;
         margin-bottom: 101px;
+        @media (max-width: 768px) {
+            margin-top: 15px;
+            margin-bottom: 30px;
+        }
 
     }
     &__text {
@@ -50,6 +67,12 @@
             background-color: #0ABE3D;
             padding: 9px 19px;
             box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
+            @media (max-width: 768px) {
+                padding: 9px 16px;
+                font-size: 15px;
+                margin: 0 auto;
+            }
+
         }
 
     }
@@ -78,6 +101,10 @@
             background-color: #0ABE3D;
             padding: 15px 14px;
             box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
+            @media (max-width: 768px) {
+                font-size: 16px;
+            }
+            
         }
     }
     
