--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -62,6 +62,7 @@
         }
     }
     &__item {
+        display: none;
         margin-top: 15px;
         list-style-type: none;
         line-height: 1.5;
@@ -82,6 +83,7 @@
         font-size: 22px;
         font-weight: bold;
         margin-top: 27px;
+        cursor: pointer;
     }
     &-link {
         &__product {
