--- a/src/assets/scss/pages/list/_list.scss
+++ b/src/assets/scss/pages/list/_list.scss
@@ -1,5 +1,6 @@
 .list {
     &-block {
+        margin-bottom: 50px;
         @media (max-width: 768px) {
             display: flex;
             align-items: center;
@@ -40,7 +41,7 @@
         &__img {
             display: flex;
             flex-direction: column;
-            font-size: 12px;
+            font-size: 15px;
              @media (max-width: 768px) {
                  align-items: center;
                  justify-content: center;
@@ -51,6 +52,9 @@
                  p {
                      margin-top: 15px;
                  }
+             }
+             p {
+                 margin-top: 15px;
              }
 
             img {
