--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -4,6 +4,9 @@
         font-size: 30px;
         font-weight: bold;
         margin: 34px 0 40px;
+        @media (max-width: 768px) {
+            font-size: 20px;
+        }
     }
     &-block {
         max-width: 1340px;
@@ -11,6 +14,9 @@
         display: flex;
         justify-content: space-between;
         padding-bottom: 29px;
+        @media (max-width: 768px) {
+                display: block;
+            }
     }
     &-list {
         padding: 0;
@@ -20,7 +26,6 @@
     }
 
     &-item {
-        
         &__list {
             width: 220px;
             display: flex;
@@ -64,16 +69,24 @@
                 border: 1px solid #fff;
                 box-shadow: 5px 5px 8px 5px #CEEDDC;
             }
+                    @media (max-width: 768px) { 
+                       width: 100%;
+                    }
         }
         &__btn {
-          margin-bottom: 25px;
+        margin-bottom: 25px;
         }
     }
- 
+
 
     &-sidebar {
         margin-left: 30px;
-       
+        @media (max-width: 768px) { 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 0;
+        }
     }
 
     &-form {
@@ -85,11 +98,24 @@
         background-color: #F7F9FC;
         border-radius: 4px;
         box-shadow: 5px 7px 10px -9px rgba(0,0,0,0.59);
+        @media (max-width: 768px) { 
+            width: 100%;
+            padding: 25px 0;
+            margin-left: 0;
+        }
+
+        &__label {
+            margin-top: 15px;
+        }
+
 
         &__title {
             font-size: 22px;
             font-weight: 400;
             color: #221F39;
+            @media (max-width: 768px) { 
+                font-size: 18px;
+            }
         }
 
         &__text {
@@ -99,7 +125,11 @@
         &__group {
             display: flex;
             justify-content: space-between;
-
+            @media (max-width: 768px) { 
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             &:last-child {
                 margin-top: 15px;
             }
@@ -119,16 +149,26 @@
         &__medium-input {
             width: 330px;
             font-size: 16px;
+            @media (max-width: 768px) { 
+                width: 100%;
+            }
         }
 
         &__full-input {
             width: 702px;
             font-size: 16px;
+            @media (max-width: 768px) { 
+                width: 100%;
+            }
+
         }
 
         &__bottom-input {
             width: 210px;
             font-size: 16px;
+            @media (max-width: 768px) { 
+                width: 100%;
+            }
         }
         &__group--middle {
             margin: 20px 0;
@@ -163,7 +203,8 @@
         }
 
         &__title {
-            margin: 25px 0;
+            margin-top: 50px;
+            margin-bottom: 10px;
 
             font-size: 20px;
             color: #221F39;
@@ -173,6 +214,14 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
+            @media (max-width: 768px) {
+                display: flex;
+                flex-direction: column;
+                align-items:   center;
+                width: 100%;
+                justify-content: center;
+            }
+
         }
 
         &__id {
@@ -184,11 +233,11 @@
             margin-top: 11px;
             color: #221F39;
         }
-
-       
     }
 
 }
+
+// table
 
 .content__title {
     margin-top: 5px;
@@ -199,6 +248,7 @@
     border-spacing: 0;
     font-size: 12px;
     margin-top: 35px;
+
     th {
         padding: 20px 0 23px;
         a {
@@ -216,16 +266,18 @@
         color: #C12929;
     }
 }
-
 .content-table  {
     margin-top: 10px;
     margin-left: 100px;
     display: none;
+    @media (max-width: 768px) {
+        overflow-x: scroll;
+        margin-left: 0;
+    }
     &.active {
         display: block;
     }
 }
-
 .cabinet-form  {
     display: none;
     &.active {
