--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,42 +1,37 @@
+  @mixin font($font_name, $file_name, $weight, $style) {
+      @font-face {
+          font-family: $font_name;
+          font-display: swap;
+          src: url("../fonts/#{$file_name}.woff") format("woff"),
+          url("../fonts/#{$file_name}.woff2") format("woff2");
+          font-weight: #{$weight};
+          font-style: #{$style};
+      }
+  }
   
-@mixin font($font_name, $file_name, $weight, $style) {
-
-    @font-face {
-    font-family: $font_name;
-    font-display: swap;
-    src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
-    font-weight: #{$weight};
-    font-style: #{$style};
-    }
-}
-
-
-
-@import "./base";
-@import "./fonts";
-@import "blocks/header";
-@import "blocks/nav";
-@import "blocks/footer";
-
-@import "components/_styles.imageuploader.scss";
-@import "components/menu";
-@import "components/slider";
-@import "components/modal";
-
-@import "pages/register/register";
-@import "pages/verify/verify";
-@import "pages/office/office";
-@import "pages/announ/announ";
-@import "pages/news/news";
-@import "pages/manual/manual";
-@import "pages/reporting/reporting";
-@import "pages/about/about";
-@import "pages/apartment/apartment";
-@import "pages/product/product";
-@import "pages/cabinet/cabinet";      
-@import "pages/list/list";      
-@import "pages/director/director";      
-@import "pages/calculator/calculator";      
-@import "pages/calculator/decor";      
-@import "pages/calculator/policyholder";      
-
+  @import "./base";
+  @import "./fonts";
+  @import "blocks/header";
+  @import "blocks/nav";
+  @import "blocks/footer";
+  @import "components/_styles.imageuploader.scss";
+  @import "components/menu";
+  @import "components/slider";
+  @import "components/modal";
+  @import "components/range";
+  @import "pages/register/register";
+  @import "pages/verify/verify";
+  @import "pages/office/office";
+  @import "pages/announ/announ";
+  @import "pages/news/news";
+  @import "pages/manual/manual";
+  @import "pages/reporting/reporting";
+  @import "pages/about/about";
+  @import "pages/apartment/apartment";
+  @import "pages/product/product";
+  @import "pages/cabinet/cabinet";
+  @import "pages/list/list";
+  @import "pages/director/director";
+  @import "pages/calculator/calculator";
+  @import "pages/calculator/decor";
+  @import "pages/calculator/policyholder";
