Adaptive 769px done 100%

--- a/src/assets/scss/components/_range.scss
+++ b/src/assets/scss/components/_range.scss
@@ -29,8 +29,11 @@ label {
 }
 
 .range {
-    width: 50vw;
+    width: 100vw;
     min-width: 200px;
+    @media (max-width: 769px) {
+        width: 100%;
+    }
 }
 
 ////////////////////////
