--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -1,6 +1,5 @@
 .modal {
     width: 496px;
-    // height: 359px;
 
     background-color: #fff; 
 
@@ -18,16 +17,15 @@
         width: 100%;
         font-size: 12px;
         text-align: center;
-        // padding: 0;
     }
     &__title {
+        margin-bottom: 40px;
         @media (max-width: 769px) {
             margin-top: 20px;
             margin-bottom: 0;
             font-size: 25px;
         }
     }
-  
     &.open{
         opacity: 1;
         z-index: 9;
@@ -54,9 +52,13 @@
         z-index: -1;
         opacity: 0;
     }
+    &-title {
+        margin: 40px 0 10px;
+    }
 
     &__group {
         padding-left: 79px;
+        padding-bottom: 45px;
         @media (max-width: 769px) {
             padding-left: 0;
             padding-bottom: 35px;
@@ -115,6 +117,7 @@
                 display: block;
                 font-size: 18px;
                 padding-bottom: 3px;
+                margin-left: 0;
             }
             input {
                 width: 100%;
