--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -4,6 +4,14 @@
     padding: 28px 92px 43px;
     border-radius: 4px;
     margin-bottom: 30px;
+    @media (max-width: 769px) {
+        width: 100%;
+        padding: 0;
+        padding-top: 28px;
+        padding-bottom: 35px;
+        text-align: center;
+    }
+
     &--cal {
         background-color: #fff;
         padding: 0;
@@ -29,9 +37,12 @@
     &-form {
         &__group {
             &.padding-0{
+                padding-top: 0;
                     @media (max-width: 769px) {
                         padding-top: 0px !important;
                         width: 100%;
+                        flex-direction: column;
+                        align-items: center;
                     }
                 }
             display: flex;
@@ -74,6 +85,9 @@
             margin: 0;
             text-decoration: none;
             margin-left: 50px;
+            @media (max-width: 769px) {
+                margin-left: 0;
+            }
         }
         &__block {
             display: flex;
@@ -109,11 +123,17 @@
             &:focus {
                 border-bottom: 2px solid #0ABE3D;
             }
+            @media (max-width: 769px) {
+                margin-top: 25px;
+            }
         }
         &--long {
             input {
                 outline: none;
                 width: 518px;
+                @media (max-width: 769px) {
+                    width: 100%;
+                }
             }
         }
         &__checkbox {
@@ -123,9 +143,13 @@
             input {
                 width: 20px;
                 height: 20px;
+                @media (max-width: 769px) {
+                    width: 50px;
+                }
             }
             p {
                 margin-left: 10px;
+                
             }
         }
     }
