--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -105,6 +105,7 @@
     &__bottom{
         position: absolute;
         width: 100%;
+        padding: 0 20px;
         bottom: 35px;
         z-index: 9;
     }
