--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -3,11 +3,15 @@
     padding: 0;
     &--about {
         box-shadow: none;
+        position: absolute;
     }
     &--apartment {
         box-shadow: none;
+        position: absolute;
     }
     &--index {
+        width: 100%;
+        padding: 0 20px;
         box-shadow: none;
         position: absolute;
         left: 50%;
