--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -6,15 +6,17 @@
         position: relative;
         height: 100vh;
         overflow: hidden;
-     
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         
 
         &__title {
             text-align: center;
-            font-size: 70px;
+            font-size: 60px;
             color: #fff;
-            margin-top: 121px;
-            margin-bottom: 15px;
+            margin: auto;
             @media (max-width: 769px) {
                 font-size: 25px;
             }
