--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -7,26 +7,23 @@
             height: 100vh;
             position: relative;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         &__title {
             text-align: center;
             font-size: 50px;
             color: #fff;
-
-            padding-top: 100px;
-            margin: 0 auto;
-            margin-bottom: 15px;
-
+            margin:auto;
             @media (max-width: 769px) {
                 font-size: 25px;
-            }
-            h2{
-                margin-bottom: 0;
             }   
         }
         &__btn {
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 20px;
             a {
                 text-decoration: none;
                 border: 1px solid #fff;
