calculator+poisk+add inputmask

--- a/src/assets/scss/pages/calculator/_decor.scss
+++ b/src/assets/scss/pages/calculator/_decor.scss
@@ -78,6 +78,14 @@
             }
         }
     }
+    .file__img{
+        height: 130px;
+        width: 127px;
+        margin-left: 7px;
+    }
+    .dec {
+        width: 560px;
+    }
 }
 
 input[type="checkbox"]:checked + label:before {
@@ -109,3 +117,73 @@ input[type="checkbox"] + label:before {
 input[type="checkbox"]:checked + label:after {
     font-weight: bold;
 }
+
+// decor-2 drop
+
+.form-drop2 {
+    width: 100%;   
+}
+.select-box4 {
+    // justify-content: center;
+}
+
+
+
+
+// decor drop
+
+.select-box {
+    cursor: pointer;
+    position : relative;
+    max-width:  20em;
+    width: 100%;
+    margin-bottom: 25px;
+    margin-left: 18px;
+  }
+  
+.select,
+.label {
+  color: #414141;
+  display: block;
+  font: 400 17px/2em 'Source Sans Pro', sans-serif;
+}
+
+.select {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  padding: 5px 0;
+  height: 40px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  background: none transparent;
+  border: 0 none;
+}
+.select-box1 {
+  background: #ececec;
+}
+
+.label {
+  position: relative;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.open .label::after {
+   content: "▲";
+}
+.label::after {
+  content: "▼";
+  font-size: 12px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 5px 15px;
+  border-left: 5px solid #fff;
+}
+
+.form-drop {
+    display: none;
+}
+
+
+
