--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -24,6 +24,7 @@ body {
 /* ------------nav background Color--------- */
 .black {
     color: #000;
+    border: 1px solid #000 !important;
 }
 .white {
     color: #fff;
