--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -198,14 +198,13 @@
 
 #pagination {
     display: flex;
-    justify-content: space-between;
     width: 175px;
     margin-top: 14px; 
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    
+    justify-content: center;
 }
 .pagination-btn {
     display: flex;
@@ -216,4 +215,5 @@
     width: 8px;
     height: 8px;
     cursor: pointer;
+    margin: 0 5px;
 }
