--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -20,23 +20,24 @@
     }
 
 
-
     &-search {
         display: none;
         position: relative;
         input {
             width: 500px;
-            height: 39px;
-            
+            height: 38px;
             padding-left: 50px;
             font-size: 20px;
-            border-radius: 5px;
             border: 1px solid #fff;
+
+            border-radius: 0;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
             background: rgba(0,0,0,.35);
-            
+
             color: #fff;
             outline: none;
-
+            transition: .3s linear;
         }
 
         &__icon {
@@ -47,12 +48,14 @@
 
         }
         &--white {
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
             input {
-                border: 1px solid #000;
+                height: 36px;
                 background: rgba(255,255,255, .5);
-                
                 color: #000;
                 outline: none;
+                transition: .3s linear;
             }
         }
     }
@@ -88,11 +91,18 @@
         border: 1px solid #221F39;
         border-radius: 4px;
         padding: 8px;
-
+        
         &--search {
             margin-right: 67px;
             padding: 8px 13px;
+
+            &.border{
+                border-radius: 0;
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+            }
         }
+
         &--menu {
             margin-left: 67px;
             padding: 8px 13px ;
@@ -118,7 +128,12 @@
     transition: opacity .3s linear;
 }
 
-#input {
+#input{
     opacity: 0;
+    transition: opacity .3s linear;
+}
+
+#input.show{
+    opacity: 1;
     transition: opacity .3s linear;
 }
