--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -7,11 +7,12 @@
         .header {
             &__title {
                 &--first {
-                    font-size: 40px;
+                    font-size: 30px;
                 }
                 &--second {
-                    font-size: 40px;
+                    font-size: 30px;
                 }
+                width: 100%;
             }
         }
     }
@@ -150,12 +151,13 @@
             padding: 15px 55px;
             font-size: 22px;
             @media (max-width: 769px) {
-                padding: 0;
-                width: 250px;
-                height: 60px;
+                padding: 0 15px;
+                width: auto;
+                height: 40px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                font-size: 20px;
             }
         }
     }
