--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -60,7 +60,8 @@ body {
     color: #221F39;
     margin: 55px 0 60px;
     @media (max-width: 769px) {
-        font-size: 25px;
+        font-size: 35px;
+        text-align: center;
     }
 
 }
