--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -16,7 +16,8 @@
             align-items: center;
             justify-content: center;
             :nth-child(3) {
-                margin-right: auto;
+                margin-right: 95px;
+                margin-top: 15px;
             }
         }
     }   
@@ -61,6 +62,8 @@
             width: 100%;
             font-size: 16px;
             @media (max-width: 769px) {
+                text-align: center;
+                margin-top: 15px;
                 flex-direction: column;
             }
 
