--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -102,7 +102,7 @@
         justify-content: center;
         align-items: center;
     }
- 
+
 
     &-form {
         display: block;
@@ -153,7 +153,7 @@
                 outline: none ;
                 @media (max-width: 769px) {
                     width: 80%;
-                    // padding-top: 5px;
+                    margin-top: 5px;
                 }
 
             }
