--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -68,6 +68,9 @@
         &__text {
             font-size: 22px;
             line-height: 1.4;
+        @media (max-width: 769px) {
+            text-align: center;
+        }
         }
     }
     &-content__text {
@@ -84,11 +87,16 @@
             margin-bottom: 50px;
         }
     }
+    &__item {
+        display: flex;
+        justify-content: center;
+        flex-basis: 33.3%;
+        margin-bottom: 25px;
+    }
     &__license{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 0 50px 74px;
+        padding: 0 60px 74px;
         img {
             width: 265px;
             height: 375px;
@@ -97,6 +105,8 @@
             padding: 0 15px 45px;
             a {
                 margin-top: 15px;
+                display: flex;
+                flex-basis: 50%;
             }
         }
 
