--- a/src/assets/scss/pages/announ/_announ.scss
+++ b/src/assets/scss/pages/announ/_announ.scss
@@ -5,7 +5,7 @@
     &__block {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     &-item {
@@ -14,6 +14,11 @@
         margin-top: 23px;
         position: relative;
         overflow: hidden;
+        margin-left: 10px;
+        @media (max-width: 769px) {
+            margin:auto;
+            margin-top: 15px;
+        }
         &__img {
             width: 100%;
             height: 250px;
@@ -21,7 +26,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             transition: all .5s linear;
-
+            
             &:hover {   
                 transform: scale(1.2);
             }
