--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -40,9 +40,8 @@
                 padding-top: 0;
                     @media (max-width: 769px) {
                         padding-top: 0px !important;
-                        width: 100%;
-                        flex-direction: column;
-                        align-items: center;
+                        width: 90%;
+                        margin-left: 25px;;
                     }
                 }
             display: flex;
@@ -69,6 +68,7 @@
             font-size: 22px;
             @media (max-width: 769px) {
                 display: block;
+                margin: 0 auto;
             }
             span {
                 margin-left: 25px;
@@ -94,13 +94,23 @@
             justify-content: space-between;
             width: 710px;
             @media (max-width: 769px) {
-                display: block;
+                display: flex;
                 width: 100%;
             }
         }
         &__check {
             padding: 15px 0;
             font-size: 18px;
+            @media (max-width: 769px) {
+                display: flex;
+                align-items: center;
+            }
+            span {
+                @media (max-width: 769px) {
+                    margin-left: 7px;
+                    max-width: 256px;
+                }
+            }
         }
         &__oferta {
             text-align: center;
