--- a/src/assets/scss/pages/news/_news.scss
+++ b/src/assets/scss/pages/news/_news.scss
@@ -5,6 +5,9 @@
         font-size: 21px;
         line-height: 1.5;
         padding-top: 81px;
+        @media (max-width: 769px) {
+            text-align: center;
+        }
     }
     &__btn {
         display: flex;
