--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -44,6 +44,9 @@ body {
     width: 1270px;
     margin: 0 auto;
     padding: 10px 40px;
+    @media (max-width: 1024px) {
+        width: 100%;
+    }
     @media (max-width: 769px) {
         width: 100%;
         padding: 10px 25px;
