--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -10,6 +10,9 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
+        @media (max-width: 1024px) {
+            justify-content: start;
+        }
         @media (max-width: 769px) { 
             display: flex;
             flex-direction: column;
@@ -32,15 +35,13 @@
             display: flex;
             align-items: center;
             margin: 0 0 15px;
-            @media (max-width: 769px) { 
-                align-items: center;
-            }
-
-            
-            
         }
     }
     &-item {
+        @media (max-width: 1024px) {
+            margin-left: 65px;
+        }
+
         &__title {
             font-weight: bold;
             font-size: 22px;
@@ -61,6 +62,11 @@
             justify-content: space-between;
             width: 100%;
             font-size: 16px;
+            @media (max-width: 1024px) {
+                align-items: center;
+                flex-direction: column;
+
+            }
             @media (max-width: 769px) {
                 text-align: center;
                 margin-top: 15px;
@@ -72,6 +78,9 @@
             font-size: 18px;
             text-decoration: none;
             color: #000;
+            @media (max-width: 1024px) {
+                margin-top: 5px;
+            }
             @media (max-width: 769px) {
                 margin-top: 15px;
             }
