--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -68,18 +68,26 @@
         &__text {
             font-size: 22px;
             line-height: 1.4;
-        @media (max-width: 769px) {
-            text-align: center;
-        }
+            @media (max-width: 1024px) {
+                font-size: 20px;
+            }
+            @media (max-width: 769px) {
+                text-align: center;
+            }
         }
     }
-    &-content__text {
-        text-align: center;
-        font-size: 18px;
-        line-height: 2;
-        padding-bottom: 60px;
-        p {
-            margin-top: 30px;
+    &-content {
+            @media (max-width: 1024px) {
+                display: flex;
+            }
+        &__text {
+            text-align: center;
+            font-size: 18px;
+            line-height: 2;
+            padding-bottom: 60px;
+            p {
+                margin-top: 30px;
+            }
         }
     }
     &-license {
@@ -97,6 +105,10 @@
         display: flex;
         flex-wrap: wrap;
         padding: 0 60px 74px;
+        @media (max-width: 1024px) {
+            width: 90%;
+        }
+
         img {
             width: 265px;
             height: 375px;
