--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -3,6 +3,19 @@
     position: relative;
     overflow: hidden;
 
+    @media (max-width: 1024px) {
+        .header {
+            &__title {
+                &--first {
+                    font-size: 70px;
+                }
+                &--second {
+                    font-size: 70px;
+                }
+            }
+        }
+    }
+
     @media (max-width: 769px) {
         .header {
             &__title {
@@ -16,18 +29,21 @@
             }
         }
     }
-    @media (max-width: 1024px) {
+    @media (max-width: 568px) {
         .header {
             &__title {
+                width: 100%;
                 &--first {
-                    font-size: 70px;
+                    font-size: 30px;
                 }
                 &--second {
-                    font-size: 70px;
+                    font-size: 30px;
                 }
             }
         }
+
     }
+   
 
 
     &__top {
