--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -44,6 +44,9 @@
         @media (max-width: 769px) {
             margin-left: 0;
         }
+        @media (max-width: 568px) {
+            font-size: 12px;
+        }
     }
 
     &-button {
