--- a/src/assets/scss/pages/director/_director.scss
+++ b/src/assets/scss/pages/director/_director.scss
@@ -14,6 +14,9 @@
         @media (max-width: 769px) {
             margin-left: 18px;
         }
+        @media (max-width: 568px) {
+            margin-left: 0;
+        }
     }
 
     &-item {
@@ -27,6 +30,9 @@
             outline: none;
             @media (max-width: 769px) {
                 width: 100%;
+            }
+            @media (max-width: 568px) {
+                margin-bottom: 5px;
             }
 
         }
@@ -143,6 +149,11 @@
         }
     }
 
+}
+#uploadImages {
+    @media (max-width: 568px) {
+        margin-top: 17px;
+    }
 }
 
 #addImages {
