--- a/src/assets/scss/pages/verify/_verify.scss
+++ b/src/assets/scss/pages/verify/_verify.scss
@@ -19,7 +19,7 @@
         padding: 0 55px;
         @media (max-width: 769px) {
             :nth-child(2) {
-                margin-left: auto;
+                right: 25px;
             }
         }
     }
