--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -155,6 +155,9 @@
                     width: 80%;
                     margin-top: 5px;
                 }
+                @media (max-width: 568px) {
+                    margin-top: -3px;
+                }
 
             }
 
