--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -39,6 +39,9 @@
         text-align: center;
         font-size: 22px;
         margin: 93px 0 83px;
+        @media (max-width: 568px) {
+            font-size: 18px;
+        }
     }
     &-block {
         background-color: #f5f5f5;
