--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -138,6 +138,9 @@
                 align-items: center;
                 justify-content: space-around;
             }
+            @media (max-width: 568px) { 
+                flex-direction: column;
+            }
             &:last-child {
                 margin-top: 15px;
             }
