--- a/src/assets/scss/pages/calculator/_decor.scss
+++ b/src/assets/scss/pages/calculator/_decor.scss
@@ -29,6 +29,9 @@
             padding-top: 25px;
             margin: 0 auto;
         }
+        @media (max-width: 568px) {
+            width: 100%;
+        }
 
         &__title {
             margin-top: 29px;
@@ -85,6 +88,10 @@
         height: 130px;
         width: 127px;
         margin-left: 7px;
+        @media (max-width: 568px) {
+            height: 100px;
+            width: 95px;
+        }
     }
     .dec {
         width: 560px;
@@ -133,6 +140,9 @@ input[type="checkbox"]:checked + label:after {
     margin-left: 18px;
     @media (max-width: 769px) {
         width: 95%;
+    }
+    @media (max-width: 568px) {
+        width: 88%;
     }
 }
 .select,
