--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -43,6 +43,10 @@
                         width: 90%;
                         margin-left: 25px;;
                     }
+                    @media (max-width: 568px) {
+                        flex-direction: column;
+                        margin: 0 auto;
+                    }
                 }
             display: flex;
             position: relative;
@@ -96,6 +100,9 @@
             @media (max-width: 769px) {
                 display: flex;
                 width: 100%;
+            }
+            @media (max-width: 568px) {
+                flex-direction: column;
             }
         }
         &__check {
@@ -163,6 +170,9 @@
             }
             p {
                 margin-left: 10px;
+                @media (max-width: 568px) {
+                    margin: 0;
+                }
                 
             }
         }
