--- a/src/assets/scss/pages/manual/_manual.scss
+++ b/src/assets/scss/pages/manual/_manual.scss
@@ -1,7 +1,14 @@
 .manual {
     &__img {
-        @media (max-width: 768px) {
-          margin: 0 auto;
+        img {
+            width: 351px;
+            height: 490px;
+        @media (max-width: 568px) {
+            width: 100%;
+        }
+        }
+        @media (max-width: 769px) {
+            margin: 0 auto;
         }
     }
 
@@ -15,6 +22,9 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
+        }
+        @media (max-width: 568px) {
+            padding-bottom: 10px;
         }
     }
     &-content {
@@ -64,7 +74,12 @@
         @media (max-width: 769px) {
             flex-wrap: wrap;
             margin: 0 auto;
-
+        }
+        @media (max-width: 568px) {
+            width: 100%;
+            display: flex;
+            justify-content: start;
+            flex-direction: column;
         }
 
             a{
