--- a/src/assets/scss/pages/register/_register.scss
+++ b/src/assets/scss/pages/register/_register.scss
@@ -31,6 +31,9 @@
                 position: absolute;
                 right: 65px;
             }
+            @media (max-width: 769px) {
+                right: 0;
+            }
         }
         &--logo {
             @media (max-width: 1024px) {
