--- a/src/assets/scss/pages/reporting/_reporting.scss
+++ b/src/assets/scss/pages/reporting/_reporting.scss
@@ -18,15 +18,26 @@
             width: 100%;
             justify-content: center;
         }
+        @media (max-width: 568px) {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
     }
     &-item {
         display: flex;
         align-items: center;
         width: 50%;
         margin: 22px 0 37px;
+        @media (max-width: 568px) {
+            width: 100%;
+        }
 
         &--center {
             justify-content: center;
+            @media (max-width: 568px) {
+                justify-content: start;
+            }
         }
 
         p {
@@ -34,7 +45,6 @@
             font-size: 20px;
         }
     }
-   
     &-list {
         padding-bottom: 88px;
         &__item {
@@ -47,9 +57,6 @@
                 flex-wrap: wrap;
                 justify-content: center;
             }
-
-
-
         }
         &__btn {
             margin: 0;
