--- a/src/assets/scss/pages/reporting/_reporting.scss
+++ b/src/assets/scss/pages/reporting/_reporting.scss
@@ -61,6 +61,7 @@
         &__btn {
             margin: 0;
             padding: 15px 50px;
+            text-decoration: none;
             @media (max-width: 769px) {
                 margin: 15px 0;
             }
