--- a/src/assets/scss/pages/manual/_manual.scss
+++ b/src/assets/scss/pages/manual/_manual.scss
@@ -3,6 +3,7 @@
         img {
             width: 351px;
             height: 490px;
+            object-fit: cover;
         @media (max-width: 568px) {
             width: 100%;
         }
